[package]
name = "wgpu_assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.0"
env_logger = "0.9"
log = "0.4"
winit = "0.27.4"
pollster = "0.2.5"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
rand = "0.8.4"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
